--- a/main-page.html
+++ b/main-page.html
@@ -1,1 +1,14 @@
-
+<html>
+  <head>
+    <title>
+      HTML and Friends
+    </title>
+  
+  </head>
+  <body>
+    <p>
+      Blah Blah Blah <br />
+      Blah Blah
+    </p>
+  </body>
+</html>
